--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -9,13 +9,18 @@
     </p>
     <div class="about_button">
       <a class="about_button_resume" (click)="downloadResume()"><i class="pi pi-download"></i> Resume</a>
-      <a  class="about_button_contact" href="mailto:haroondev2@gmail.com"><i class="pi pi-envelope"></i> Contact Me</a>
+      <a class="about_button_contact" href="mailto:haroondev2@gmail.com"><i class="pi pi-envelope"></i> Contact Me</a>
     </div>
     <h4 class="about_skills">
-      Here's the spread of my <span class="about_skills_text">core skills</span>:
+      Here's the spread of my
+      <span class="about_skills_text">core skills</span>:
     </h4>
-    <img class="about_img_lg" src="/images/exp1.webp" alt="exp1" />
-    <img class="about_img_sm" src="/images/exp2.webp" alt="exp2" />
-    <p class="about_cta">If you'd like to learn more about me or my work, hit me up!</p>
+    <div class="about_images">
+      <img class="about_img_lg" src="/images/exp1.webp" alt="exp1" />
+      <img class="about_img_sm" src="/images/exp2.webp" alt="exp2" />
+    </div>
+    <p class="about_cta">
+      If you'd like to learn more about me or my work, hit me up!
+    </p>
   </div>
 </section>
