--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -9,6 +9,39 @@
     width: 100%;
   }
 
+  &_header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &_more {
+    color: var(--slate-600);
+    font-weight: 700;
+    text-decoration: none;
+    padding: 6px 15px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    border: 0.5px solid var(--slate-300);
+
+    &:hover {
+      background-color: var(--slate-100);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--slate-300);
+
+      &:hover {
+        background-color: var(--slate-800);
+      }
+    }
+
+    i {
+      margin-left: 5px;
+    }
+  }
+
   &_title {
     font-size: 30px;
     font-weight: 600;
