--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
   --slate-700: #334155;
   --slate-800: #1e293b;
   --slate-900: #0f172a;
-  --slate-950: rgb(15 23 42);
+  --slate-950: #020617;
   --accent: #2563eb;
 }
 
@@ -31,7 +31,7 @@ html {
   line-height: 1.5;
 
   @media (prefers-color-scheme: dark) {
-    background-color: var(--slate-950);
+    background-color: rgb(15 23 42);
     color: var(--slate-200);
   }
 }
