--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -20,7 +20,7 @@
 
   &_card {
     width: 300px;
-    background-color: #ededed;
+    background-color: #f5f5f5;
     padding: 20px;
     border-radius: 5px;
 
