--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ html {
 }
 
 html {
-  background-color: var(--slate-50);
+  background-color: #ffffff;
   color: var(--slate-800);
   line-height: 1.5;
   letter-spacing: 0px;
