--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -15,6 +15,34 @@
   &_cta {
     max-width: 65ch;
     font-size: 20px;
+    letter-spacing: 0px;
+  }
+
+  &_lib_text {
+    font-size: 30px;
+
+    @media (max-width: 550px) {
+      font-size: 20px;
+    }
+  }
+
+  &_devicon {
+    width: 80px;
+
+    path,
+    circle {
+      fill: var(--slate-500);
+
+      @media (prefers-color-scheme: dark) {
+        fill: var(--slate-300);
+      }
+    }
+  }
+
+  &_lib {
+    display: flex;
+    gap: 15px;
+    padding-bottom: 20px;
   }
 
   &_button {
@@ -36,6 +64,7 @@
       color: white;
       background-color: var(--accent);
       border: none;
+
       &:hover {
         background-color: #3b82f6;
       }
@@ -43,15 +72,17 @@
 
     &_contact {
       color: var(--slate-600);
+
       &:hover {
         background-color: var(--slate-100);
       }
 
       @media (prefers-color-scheme: dark) {
         color: var(--slate-300);
-      &:hover {
-        background-color: var(--slate-800);
-      }
+
+        &:hover {
+          background-color: var(--slate-800);
+        }
       }
     }
   }
@@ -73,10 +104,11 @@
     }
   }
 
-  &_images{
-    background-color:#f5f5f5;
+  &_images {
+    background-color: #f5f5f5;
     border-radius: 15px;
     padding: 30px;
+
     @media (prefers-color-scheme: dark) {
       background-color: var(--slate-800);
     }
@@ -86,7 +118,7 @@
     width: 100%;
 
     @media (prefers-color-scheme: dark) {
-      filter: invert(0.85) hue-rotate(170deg) ;
+      filter: invert(0.85) hue-rotate(170deg);
     }
 
     @media (max-width: 550px) {
