--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -33,7 +33,7 @@
       color: var(--slate-300);
 
       &:hover {
-        background-color: var(--slate-800);
+        background-color: rgb(15 23 42);
       }
     }
 
