--- a/src/app/layout/not-found/not-found.component.html
+++ b/src/app/layout/not-found/not-found.component.html
@@ -1,1 +1,14 @@
-<p>not-found works!</p>
+<section>
+  <h1>Oops! Page Not Found</h1>
+  <p>
+    It looks like the page you’re looking for doesn’t exist or has moved. You
+    can:
+  </p>
+  <ul>
+    <li>Double-check the URL for any typos.</li>
+    <li>Go back to the homepage to find what you need.</li>
+    <li>Contact us if you keep encountering this page.</li>
+  </ul>
+  <p>We’re here to help you find your way back!</p>
+  <a routerLink="/"> Go to homepage</a>
+</section>
