--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -16,8 +16,8 @@
       <span class="about_skills_text">core skills</span>:
     </h4>
     <div class="about_images">
-      <img class="about_img_lg" src="/images/exp1.webp" alt="exp1" />
-      <img class="about_img_sm" src="/images/exp2.webp" alt="exp2" />
+      <img class="about_img_lg about_image" src="/images/exp1.webp" alt="exp1" />
+      <img class="about_img_sm about_image" src="/images/exp2.webp" alt="exp2" />
     </div>
     <h4 class="about_lib_text">
       Here are some technologies I've currently been working with:
