--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -1,6 +1,6 @@
 <section class="projects_section">
   <div class="projects_container">
-    <h1 class="projects_title">Must-See Projects </h1>
+    <h1 class="projects_title">Projects </h1>
     <div class="projects_grid">
       @for (project of projects; track project.link) {
         <div class="projects_card">
