--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -8,7 +8,6 @@
   &_title {
     font-size: 30px;
     font-weight: 600;
-    opacity: 0.85;
     text-transform: uppercase;
   }
 
@@ -21,14 +20,9 @@
 
   &_card {
     width: 300px;
-    background-color: #f5f5f5;
+    background-color: var(--light-gray);
     padding: 20px;
     border-radius: 5px;
-
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--slate-800);
-      border: none;
-    }
 
     @media (max-width: 777px) {
       width: 100%;
@@ -37,13 +31,7 @@
     &:hover {
       box-shadow:
         rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
-        rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-
-      @media (prefers-color-scheme: dark) {
-        box-shadow:
-          rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
-          rgba(255, 255, 255, 0.5) 0px 0px 0px 1px;
-      }
+        var(--slate-300) 0px 0px 0px 1px;
     }
 
     &_header {
@@ -56,10 +44,6 @@
       color: var(--slate-600);
       font-size: 14px;
 
-      @media (prefers-color-scheme: dark) {
-        color: var(--slate-500);
-      }
-
       i {
         margin-right: 5px;
       }
@@ -68,10 +52,6 @@
     &_link {
       text-decoration: none;
       color: var(--slate-800);
-
-      @media (prefers-color-scheme: dark) {
-        color: var(--slate-100);
-      }
 
       &:hover {
         scale: 1.1;
@@ -98,57 +78,30 @@
       color: var(--slate-500);
       border-radius: 50px;
       padding: 3px 8px;
+
       &:hover {
         background-color: var(--slate-200);
-      }
-
-      @media (prefers-color-scheme: dark) {
-        border: 1px solid var(--slate-400);
-        color: var(--slate-400);
-        &:hover {
-          background-color: var(--slate-700);
-        }
       }
     }
   }
 
   &_card:nth-child(1) h3 {
-    color: #b45151;
-
-    @media (prefers-color-scheme: dark) {
-      color: #ffadad;
-    }
+    color: var(--pastel-red);
   }
 
   &_card:nth-child(2) h3 {
-    color: #b67d47;
-
-    @media (prefers-color-scheme: dark) {
-      color: #ffd6a5;
-    }
+    color: var(--pastel-orange);
   }
 
   &_card:nth-child(3) h3 {
-    color: #a9ad4d;
-
-    @media (prefers-color-scheme: dark) {
-      color: #fdffb6;
-    }
+    color: var(--pastel-yellow);
   }
 
   &_card:nth-child(4) h3 {
-    color: #5fa15f;
-
-    @media (prefers-color-scheme: dark) {
-      color: #caffbf;
-    }
+    color: var(--pastel-green);
   }
 
   &_card:nth-child(5) h3 {
-    color: #458b91;
-
-    @media (prefers-color-scheme: dark) {
-      color: #9bf6ff;
-    }
+    color: var(--pastel-blue);
   }
 }
