--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,24 @@
 @import "primeicons/primeicons.css";
 
 :root {
+  --accent: #2563eb;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+  color: var(--slate-800);
+}
+
+body.light {
+  --slate-0: #000000;
   --slate-50: #fcfcfc;
   --slate-100: #f1f5f9;
   --slate-200: #e2e8f0;
@@ -12,24 +30,39 @@
   --slate-800: #1e293b;
   --slate-900: #0f172a;
   --slate-950: #020617;
-  --accent: #2563eb;
-}
-
-body,
-html {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-html {
   background-color: #ffffff;
-  color: var(--slate-800);
-  letter-spacing: 0.5px;
-  line-height: 1.5;
+  --pastel-red: #b45151;
+  --pastel-orange: #b67d47;
+  --pastel-yellow: #a9ad4d;
+  --pastel-green: #5fa15f;
+  --pastel-blue: #458b91;
+  --light-gray: #f5f5f5;
+  --glow:rgba(29, 78, 216, 0.20);
+}
 
-  @media (prefers-color-scheme: dark) {
-    background-color: rgb(15 23 42);
-    color: var(--slate-200);
+body.dark {
+  --slate-0: #ffffff;
+  --slate-950: #fcfcfc;
+  --slate-900: #f1f5f9;
+  --slate-800: #e2e8f0;
+  --slate-700: #cbd5e1;
+  --slate-600: #94a3b8;
+  --slate-500: #64748b;
+  --slate-400: #475569;
+  --slate-300: #334155;
+  --slate-200: #1e293b;
+  --slate-100: #0f172a;
+  --slate-50: #020617;
+  background-color: rgb(15 23 42);
+  --pastel-red: #ffadad;
+  --pastel-orange: #ffd6a5;
+  --pastel-yellow: #fdffb6;
+  --pastel-green: #caffbf;
+  --pastel-blue: #9bf6ff;
+  --light-gray: var(--slate-200);
+  --glow:rgba(29, 78, 216, 0.15);
+
+  .about_image {
+    filter: invert(0.85) hue-rotate(170deg);
   }
 }
