--- a/src/app/features/blog/blog.component.html
+++ b/src/app/features/blog/blog.component.html
@@ -13,5 +13,5 @@
     </div>
   </div>
   }
-  <section class="blog_content" [innerHTML]="blogContent$ | async"></section>
+  <section class="blog_content" [innerHTML]="blogContent"></section>
 </main>
