update to version 19

--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -39,7 +39,7 @@
 
   &_content {
     a {
-      color: black;
+      color: var(--slate-950);
       font-weight: 700;
       letter-spacing: 1.2px;
     }
