--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -1,12 +1,12 @@
 .about {
   &_container {
     max-width: 1100px;
-    margin: 100px auto;
+    margin: 0px auto 100px;
     padding: 0 5vw;
   }
 
   &_title {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 600;
   }
 
