--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -1,14 +1,18 @@
 .hero {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 70px 5vw;
+  padding: 0 5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: calc(100vh - 80px);
+  max-height: calc(800px);
+  transform: translateY(-50px);
 
   @media (max-width: 768px) {
     padding: 40px 5vw;
+    max-height: none;
   }
 
   &_title {
@@ -17,9 +21,14 @@
     letter-spacing: 2px;
     line-height: 1.2;
     margin-bottom: 10px;
+    text-align: center;
 
     @media (max-width: 768px) {
       font-size: 40px;
+    }
+
+    @media (max-width: 1080px) {
+      text-align: left;
     }
   }
 
@@ -27,7 +36,7 @@
     display: flex;
     gap: 20px;
 
-    > div {
+    >div {
       flex: 1;
     }
   }
@@ -57,7 +66,7 @@
       aspect-ratio: 1/1;
       width: 150px;
 
-      > div {
+      >div {
         position: absolute;
         width: 100%;
         height: 100%;
