--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ body.light {
   --pastel-green: #5fa15f;
   --pastel-blue: #458b91;
   --light-gray: #f5f5f5;
-  --glow:rgba(29, 78, 216, 0.20);
+  --glow:transparent;
 }
 
 body.dark {
