--- a/src/app/features/blog/blog.component.html
+++ b/src/app/features/blog/blog.component.html
@@ -1,17 +1,15 @@
 <main class="blog_container">
   @if (blogInfo$ | async; as blogInfo) {
-  <div class="blog_header">
-    <h1 class="blog_header_title">{{ blogInfo["title"] }}</h1>
-    <h3 class="blog_header_date">
-      Published on {{ formatDate(blogInfo["date"]) }}
-    </h3>
-    <div class="blog_header_tags">
-      @for (keyword of blogInfo["keywords"]; track keyword; let i = $index) {
-      @if (i < 4) { <span class="blog_header_tag">{{ keyword }}</span>
-        }
-        }
+    <div class="blog_header">
+      <h1 class="blog_header_title">{{ blogInfo["title"] }}</h1>
+      <h3 class="blog_header_date">
+        Published on {{ formatDate(blogInfo["date"]) }}
+      </h3>
+      <div class="blog_header_tags">
+        <span class="blog_header_tag">{{ blogInfo["keywords"][0] }}</span>
+        <span class="blog_header_tag">{{ blogInfo["keywords"][1] }}</span>
+      </div>
     </div>
-  </div>
   }
   <section class="blog_content" [innerHTML]="blogContent$ | async"></section>
 </main>
