--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -55,7 +55,8 @@
       padding-left: 10px;
     }
 
-    p code {
+    p code,
+    li code {
       background-color: var(--slate-200);
       padding: 2px 4px;
       border-radius: 5px;
@@ -63,10 +64,14 @@
 
     pre {
       border-radius: 5px;
-      font-size: 14px;
+      font-size: 12px;
       overflow-x: scroll;
       margin: 30px 0;
       border: 0.5px solid var(--slate-300);
+    }
+
+    hr {
+      color: var(--slate-300);
     }
 
     li {
