--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -1,11 +1,11 @@
 <section class="hero_section">
   <div class="hero">
-    <h1 class="hero_title">
-      Creating digital experiences people actually enjoy using
+    <h1 class="hero_title animate_down" [style.animationDelay]="'600ms'">
+      Creating digital experiences that people actually enjoy using
     </h1>
     <div class="hero_content">
       <div class="hero_profile">
-        <div class="hero_profile_wrapper">
+        <div class="hero_profile_wrapper animate_up" [style.animationDelay]="'900ms'">
           <div>
             <div class="hero_profile_text">
               @for (char of arcText; let i = $index; track i) {
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div>
-        <h3 class="hero_description">
+        <h3 class="hero_description animate_up" [style.animationDelay]="'1100ms'">
           I'm a web developer with 2 years of experience, based on India. I
           mostly enjoy building software in the sweet spot where engineering and
           design meet.
