--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,34 @@ body.dark {
     filter: invert(0.85) hue-rotate(170deg);
   }
 }
+
+.animate_down {
+  opacity: 0;
+  animation: down 500ms ease-in;
+  animation-fill-mode: forwards;
+}
+@keyframes down {
+  0% {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.animate_up {
+  opacity: 0;
+  animation: up 500ms ease-in;
+  animation-fill-mode: forwards;
+}
+@keyframes up {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
