--- a/src/app/layout/hero/hero.component.scss
+++ b/src/app/layout/hero/hero.component.scss
@@ -14,6 +14,7 @@
   @media (max-width: 768px) {
     padding: 40px 5vw;
     max-height: none;
+    transform: translateY(-100px);
   }
 
   &_title {
