--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -6,43 +6,59 @@
   }
 
   &_title {
-    font-size: 40px;
-    font-weight: 600;
+    margin: 0;
+    font:
+      700 30px "Kanit",
+      serif;
   }
 
-  &_description,
-  &_cta {
-    max-width: 65ch;
+  &_grid {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
+    gap: 30px;
+
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto;
+    }
+  }
+
+  &_row1,
+  &_row2 {
+    background-color: var(--slate-200);
+    padding: 40px;
+    border-radius: 20px;
+  }
+
+  &_column2 {
+    width: 300px;
+    background-color: var(--slate-200);
+    padding: 40px;
+    border-radius: 20px;
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    @media (max-width: 768px) {
+      grid-column: 1;
+      grid-row: 3;
+      width: auto;
+    }
+  }
+
+  &_img {
+    width: 100%;
+  }
+
+  &_description {
+    max-width: 45ch;
     font-size: 18px;
     letter-spacing: 0px;
-  }
-
-  &_lib_text {
-    font-size: 30px;
-
-    @media (max-width: 550px) {
-      font-size: 20px;
-    }
-  }
-
-  &_devicon {
-    width: 80px;
-
-    path,
-    circle {
-      fill: var(--slate-500);
-    }
-  }
-
-  &_lib {
-    display: flex;
-    gap: 15px;
-    padding-bottom: 20px;
   }
 
   &_button {
     display: flex;
     gap: 15px;
+    margin: 0;
 
     &_resume,
     &_contact {
@@ -71,39 +87,6 @@
       &:hover {
         background-color: var(--slate-100);
       }
-    }
-  }
-
-  &_skills {
-    font-size: 20px;
-    color: var(--slate-600);
-  }
-
-  &_skills_text {
-    font-size: 20px;
-    color: var(--slate-0);
-  }
-
-  &_images {
-    background-color: var(--light-gray);
-    border-radius: 15px;
-    padding: 30px;
-  }
-
-  &_img_lg {
-    width: 100%;
-
-    @media (max-width: 550px) {
-      display: none;
-    }
-  }
-
-  &_img_sm {
-    display: none;
-    width: 100%;
-
-    @media (max-width: 550px) {
-      display: block;
     }
   }
 }
