--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -73,12 +73,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
         img {
           width: 100%;
 
           &.desktop {
             display: block;
-          max-width: 650px;
+            max-width: 650px;
 
             @media (max-width: 550px) {
               display: none;
@@ -87,7 +88,7 @@
 
           &.mobile {
             display: none;
-          max-width: 300px;
+            max-width: 300px;
 
             @media (max-width: 550px) {
               display: block;
@@ -118,6 +119,10 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+
+    &:hover {
+      box-shadow: var(--about-shadow);
+    }
   }
 
   &_devicons {
@@ -137,7 +142,7 @@
 
       path,
       circle {
-        fill: var(--slate-500);
+        fill: var(--slate-700);
       }
     }
   }
