--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -1,28 +1,12 @@
 <section class="projects_section">
   <div class="projects_container">
-    <h1 class="projects_title">Projects </h1>
-    <div class="projects_grid">
-      @for (project of projects; track project.link) {
-        <div class="projects_card">
-          <div class="projects_card_header">
-            <span class="projects_card_time">
-              <i class="pi pi-clock"></i>{{ project.timeAgo }}
-            </span>
-            <a class="projects_card_link" [href]="project.link">
-              <i class="pi pi-external-link"></i>
-            </a>
-          </div>
-          <h3 class="projects_card_title">
-            {{ project.title }}
-          </h3>
-          <p class="projects_card_description">{{ project.description }}</p>
-          <div class="projects_card_tags">
-            @for (tag of project.tags; track tag) {
-              <span class="projects_card_tag">{{ tag }}</span>
-            }
-          </div>
-        </div>
-      }
+    <h1 class="projects_title">Case Studies</h1>
+    <div class="projects_flex1">
+      <img src="/images/prepzoneThumbnail.png" alt="">
+      <div>
+        <h2>PrepZone</h2>
+      </div>
+
     </div>
   </div>
 </section>
