--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -6,102 +6,24 @@
   }
 
   &_title {
-    font-size: 30px;
-    font-weight: 600;
-    text-transform: uppercase;
+    font:
+      700 35px "Kanit",
+      serif;
   }
 
-  &_grid {
+  &_flex1{
     display: flex;
-    flex-wrap: wrap;
-    padding: 40px 0;
-    gap: 20px;
-  }
-
-  &_card {
-    width: 300px;
-    background-color: var(--light-gray);
-    padding: 20px;
-    border-radius: 5px;
-
-    @media (max-width: 777px) {
-      width: 100%;
+    gap: 10px;
+    &>div{
+      flex: 1 ;
+      border-radius:0 20px  20px 0;
+      background: var(--bg-about);
+      padding: 20px;
     }
-
-    &:hover {
-      box-shadow:
-        rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
-        var(--slate-300) 0px 0px 0px 1px;
-    }
-
-    &_header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    &_time {
-      color: var(--slate-600);
-      font-size: 14px;
-
-      i {
-        margin-right: 5px;
-      }
-    }
-
-    &_link {
-      text-decoration: none;
-      color: var(--slate-800);
-
-      &:hover {
-        scale: 1.1;
-        transition-duration: 0.5s;
-      }
-    }
-
-    &_title {
-      letter-spacing: 1px;
-      font-size: 25px;
-
-      @media (max-width: 777px) {
-        font-size: 20px;
-      }
-    }
-
-    &_tags {
-      display: flex;
-      gap: 10px;
-    }
-
-    &_tag {
-      border: 1px solid var(--slate-500);
-      color: var(--slate-500);
-      border-radius: 50px;
-      padding: 3px 8px;
-
-      &:hover {
-        background-color: var(--slate-200);
-      }
+    &>img{
+      width: 250px;
+      border-radius: 20px 0 0 20px;
     }
   }
 
-  &_card:nth-child(1) h3 {
-    color: var(--pastel-red);
-  }
-
-  &_card:nth-child(2) h3 {
-    color: var(--pastel-orange);
-  }
-
-  &_card:nth-child(3) h3 {
-    color: var(--pastel-yellow);
-  }
-
-  &_card:nth-child(4) h3 {
-    color: var(--pastel-green);
-  }
-
-  &_card:nth-child(5) h3 {
-    color: var(--pastel-blue);
-  }
 }
