--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,14 +31,13 @@ body.light {
   --slate-900: #0f172a;
   --slate-950: #020617;
   background-color: #ffffff;
-  --pastel-red: #b45151;
-  --pastel-orange: #b67d47;
-  --pastel-yellow: #a9ad4d;
-  --pastel-green: #5fa15f;
-  --pastel-blue: #458b91;
   --light-gray: #f5f5f5;
-  --glow:transparent;
-  --bg-about:linear-gradient(135deg, rgba(2,6,23,0.1) 0% , rgba(30,41,59,0.05) 100%);;
+  --glow: transparent;
+  --bg-about: linear-gradient(135deg,
+      rgba(2, 6, 23, 0.1) 0%,
+      rgba(30, 41, 59, 0.05) 100%);
+  --about-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 body.dark {
@@ -55,14 +54,14 @@ body.dark {
   --slate-100: #0f172a;
   --slate-50: #020617;
   background-color: rgb(15 23 42);
-  --pastel-red: #ffadad;
-  --pastel-orange: #ffd6a5;
-  --pastel-yellow: #fdffb6;
-  --pastel-green: #caffbf;
-  --pastel-blue: #9bf6ff;
   --light-gray: var(--slate-200);
-  --glow:rgba(29, 78, 216, 0.15);
-  --bg-about:linear-gradient(135deg, rgba(2,6,23,0.7) 0% , rgba(30,41,59,0.4) 100%);;
+  --glow: rgba(29, 78, 216, 0.15);
+  --bg-about: linear-gradient(135deg,
+      rgba(2, 6, 23, 0.7) 0%,
+      rgba(30, 41, 59, 0.6) 100%);
+
+  --about-shadow: rgba(255, 255, 255, 0.05) 0px 1px 3px 0px,
+    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px;
 
   .about_image {
     filter: invert(0.85) hue-rotate(170deg);
@@ -74,26 +73,31 @@ body.dark {
   animation: down 500ms ease-in;
   animation-fill-mode: forwards;
 }
+
 @keyframes down {
   0% {
     transform: translateY(-50%);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
+
 .animate_up {
   opacity: 0;
   animation: up 500ms ease-in;
   animation-fill-mode: forwards;
 }
+
 @keyframes up {
   0% {
     transform: translateY(50%);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
