fix theme delay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div mouseGlow>
+  <div class="dev">
+    🚧 Portfolio under active development. Deployment imminent!
+  </div>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
