--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -2,9 +2,13 @@
   <div class="projects_container">
     <h1 class="projects_title">Case Studies</h1>
     <div class="projects_flex1">
-      <img src="/images/prepzoneThumbnail.png" alt="">
+      <img src="/images/prepZone.webp" alt="">
       <div>
-        <h2>PrepZone</h2>
+        <div>
+          <span>SPA Website</span>
+        </div>
+        <h2>PrepZone - Personalized Education Platform Transforming Student Success</h2>
+        <p>centralized platform for efficient academic preparation, offering a user-friendly interface to manage study resources, track progress, and stay organized. It simplifies learning with smart tools and an intuitive design tailored for students and educators.</p>
       </div>
 
     </div>
