--- a/src/app/layout/projects/projects.component.scss
+++ b/src/app/layout/projects/projects.component.scss
@@ -17,12 +17,27 @@
     &>div{
       flex: 1 ;
       border-radius:0 20px  20px 0;
-      background: var(--bg-about);
+      background: var(--bg-project);
       padding: 20px;
     }
     &>img{
       width: 250px;
       border-radius: 20px 0 0 20px;
+    }
+    h2{
+    font:
+      700 25px "Kanit",
+      serif;
+    }
+    @media(max-width: 600px){
+      flex-direction: column;
+      &>img{
+        width: 100%;
+        border-radius: 20px 20px 0 0;
+      }
+      &>div{
+        border-radius: 0 0 20px 20px;
+      }
     }
   }
 
