--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
   color: var(--slate-800);
 }
 
-body.light {
+html.light {
   --slate-0: #000000;
   --slate-50: #fcfcfc;
   --slate-100: #f1f5f9;
@@ -36,11 +36,14 @@ body.light {
   --bg-about: linear-gradient(135deg,
       rgba(2, 6, 23, 0.1) 0%,
       rgba(30, 41, 59, 0.05) 100%);
+  --bg-project: linear-gradient(135deg,
+      rgba(2, 6, 23, 0.1) 0%,
+      rgba(30, 41, 59, 0.05) 100%);
   --about-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
-body.dark {
+html.dark {
   --slate-0: #ffffff;
   --slate-950: #fcfcfc;
   --slate-900: #f1f5f9;
@@ -58,6 +61,9 @@ body.dark {
   --glow: rgba(29, 78, 216, 0.15);
   --bg-about: linear-gradient(135deg,
       rgba(2, 6, 23, 0.7) 0%,
+      rgba(30, 41, 59, 0.6) 100%);
+  --bg-project: linear-gradient(135deg,
+      rgba(100, 100 , 120, 0.2) 0%,
       rgba(30, 41, 59, 0.6) 100%);
 
   --about-shadow: rgba(255, 255, 255, 0.05) 0px 1px 3px 0px,
