--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
   color: var(--slate-800);
 }
 
-html.light {
+html {
   --slate-0: #000000;
   --slate-50: #fcfcfc;
   --slate-100: #f1f5f9;
